# pyterrier_adaptive

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: ci.yml  style.yml  test.yml
examples/: example.ipynb
pyterrier_adaptive/: __init__.py  _laff.py  corpus_graph.py  gar.py
pyterrier_adaptive/pt_docs/: index.rst
tests/: test_corpus_graph.py  test_laff.py
